--- a/index.html
+++ b/index.html
@@ -6,6 +6,49 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="card-container">
+        <div class="card">
+            <div class="card-header">
+                <h2>sedans</h2>
+            </div>
+            <div class="card-body">
+                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+                or on your next road trip.</p>
+            </div>
+            <div class="card-footer">
+                <button>Learn More</button>
+            </div>
+            <div class="card-header">
+                <h2>sedans</h2>
+            </div>
+            <div class="card-body">
+                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
+                or on your next road trip.</p>
+            </div>
+            <div class="card-footer">
+                <button>Learn More</button>
+            </div>
+
+            <div class="card-header">
+                <h2>suvs</h2>
+            </div>
+            <div class="card-body">
+                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
+                and off-road adventures.</p>
+            </div>
+            <div class="card-footer">
+                <button>Learn More</button>
+            </div>
+            <div class="card-header">
+                <h2>luxury</h2>
+            <div class="card-body">
+                <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
+                rental and arrive in style.</p>
+            </div>
+            <div class="card-footer">
+                <button>Learn More</button>
+
+        </div>
+    </div>
 </body>
 </html>
