--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="card-container">
+        <!-- first card -->
         <div class="card">
             <div class="card-header">
                 <h2>sedans</h2>
@@ -18,17 +20,9 @@
             <div class="card-footer">
                 <button>Learn More</button>
             </div>
-            <div class="card-header">
-                <h2>sedans</h2>
-            </div>
-            <div class="card-body">
-                <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-                or on your next road trip.</p>
-            </div>
-            <div class="card-footer">
-                <button>Learn More</button>
-            </div>
-
+        </div>
+        <!-- second card -->
+        <div class="card">
             <div class="card-header">
                 <h2>suvs</h2>
             </div>
@@ -39,16 +33,24 @@
             <div class="card-footer">
                 <button>Learn More</button>
             </div>
+        </div>
+        <!-- third card -->
+        <div class="card">
             <div class="card-header">
                 <h2>luxury</h2>
+            </div>
             <div class="card-body">
                 <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
                 rental and arrive in style.</p>
             </div>
             <div class="card-footer">
                 <button>Learn More</button>
-
         </div>
     </div>
+    <!-- footer -->
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">DevDee</a>.
+  </div>
 </body>
 </html>
