--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="card-container">
         <!-- first card -->
-        <div class="card">
+        <div class="card1">
+            <div class="card-img">
+                <img src="./images/icon-sedans.svg" alt="">
+            </div>
             <div class="card-header">
                 <h2>sedans</h2>
             </div>
@@ -22,20 +25,25 @@
             </div>
         </div>
         <!-- second card -->
-        <div class="card">
+        <div class="card2">
+            <div class="card-img">
+                <img src="./images/icon-suvs.svg" alt="">
+            </div>
             <div class="card-header">
                 <h2>suvs</h2>
             </div>
             <div class="card-body">
-                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-                and off-road adventures.</p>
+                <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road.</p>
             </div>
             <div class="card-footer">
                 <button>Learn More</button>
             </div>
         </div>
         <!-- third card -->
-        <div class="card">
+        <div class="card3">
+            <div class="card-img">
+                <img src="./images/icon-luxury.svg" alt="">
+            </div>
             <div class="card-header">
                 <h2>luxury</h2>
             </div>
@@ -47,10 +55,6 @@
                 <button>Learn More</button>
         </div>
     </div>
-    <!-- footer -->
-<div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">DevDee</a>.
-  </div>
+
 </body>
 </html>
